<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dv_register"
            android:textSize="30sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="设备类别："
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/register_dvtypeid_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="设备名称："
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/register_dvoname_edt"
                        android:layout_width="match_parent"
                         android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:maxLength="20" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="设备条形码："
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/register_dvmcode_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="备注："
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/register_dvremark_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       android:textSize="14sp" 
                       android:maxLength="1000" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dip" >

                <LinearLayout
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                    <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="设备位置："
                            android:textSize="20sp" />

                    <EditText
                            android:id="@+id/register_dvpos_edt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:maxLength="1000"
                            android:hint="若没有可不填"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dv_register_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@layout/btnstyle"
            android:text="@string/confirm"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dv_register_cancle_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:background="@layout/btnstyle"
            android:text="@string/cancle"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>